--- a/src/main/resources/config/db.properties
+++ b/src/main/resources/config/db.properties
@@ -1,4 +1,7 @@
-url:jdbc:oracle:thin:@192.168.0.54:1521:xe
-user:ictu
-pwd:12345678
-driver:oracle.jdbc.driver.OracleDriver
+db.jdbcUrl:jdbc:oracle:thin:@192.168.0.54:1521:xe
+db.username:ictu
+db.password:12345678
+db.driverClassName:oracle.jdbc.OracleDriver
+db.autoCommit:false
+db.minimumIdle:5
+db.maximumPoolSize:10
