--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
 			<artifactId>ojdbc7</artifactId>
 			<version>12.1.0</version>
 		</dependency>
-	
+
 		<!-- commons-dbcp2 -->
 		<!-- Hikaricp -->
 		<dependency>
@@ -216,6 +216,27 @@
 			<artifactId>spring-tx</artifactId>
 			<version>${spring-framework.version}</version>
 		</dependency>
+		<!-- 트랜잭션 처리용 라이브러리 -->
+
+
+		<!-- 이미지 업로드 -->
+		<!-- https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib -->
+		<dependency>
+			<groupId>org.imgscalr</groupId>
+			<artifactId>imgscalr-lib</artifactId>
+			<version>4.2</version>
+		</dependency>
+
+
+		<!-- 이미지 업로드 -->
+
+
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 
 		<!-- AspectJ -->
 		<dependency>
@@ -229,7 +250,7 @@
 			<artifactId>aspectjtools</artifactId>
 			<version>1.8.9</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
@@ -242,5 +263,13 @@
 			<artifactId>cglib-nodep</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+		<!-- slf4j-api Logger, LoggerFactory maven -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		<!-- slf4j-api Logger, LoggerFactory maven -->
 	</dependencies>
+
 </project>
