--- a/src/main/resources/config/db.properties
+++ b/src/main/resources/config/db.properties
@@ -1,4 +1,4 @@
-db.jdbcUrl:jdbc:oracle:thin:@192.168.0.54:1521:xe
+db.jdbcUrl:jdbc:oracle:thin:@localhost:1521:xe
 db.username:ictu
 db.password:12345678
 db.driverClassName:oracle.jdbc.OracleDriver
