--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,12 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
 		</dependency>
+		
+		<dependency> 
+			<groupId>commons-io</groupId> 
+			<artifactId>commons-io</artifactId> 
+			<version>1.4</version> 
+		</dependency>
 
 		<!-- commons-dbutils -->
 		<dependency>
