--- a/pom.xml
+++ b/pom.xml
@@ -159,8 +159,8 @@
 		<!-- Hikaricp -->
 		<dependency>
 			<groupId>com.zaxxer</groupId>
-			<artifactId>HikariCP</artifactId>
-			<version>2.7.9</version>
+			<artifactId>HikariCP-java7</artifactId>
+			<version>2.4.13</version>
 		</dependency>
 		<!-- mybatis -->
 		<dependency>
@@ -251,7 +251,7 @@
 			<version>1.7.25</version>
 		</dependency>
 		<!-- slf4j-api Logger, LoggerFactory maven -->
-		
+
 		<!-- cglib -->
 		<dependency>
 			<groupId>cglib</groupId>
@@ -265,11 +265,11 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-		
-		<dependency> 
-			<groupId>commons-io</groupId> 
-			<artifactId>commons-io</artifactId> 
-			<version>1.4</version> 
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
 		</dependency>
 
 		<!-- commons-dbutils -->
@@ -285,7 +285,14 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.9.3</version>
 		</dependency>
-	</dependencies>
-	
 
+		<!-- lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.22</version>
+			<scope>provided</scope>
+		</dependency>
+
+	</dependencies>
 </project>
